新增開始遊戲後的創建角色 新增角色資訊內的數值

--- a/MVVM_pratices_2/MainWindow.xaml
+++ b/MVVM_pratices_2/MainWindow.xaml
@@ -29,6 +29,15 @@
         <DataTemplate DataType="{x:Type vm:SettingsViewModel}">
             <view:SettingsPage />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:CreateCharacterViewModel}">
+            <view:CreateCharacterPage />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:RoleInfoViewModel}">
+            <view:RoleInfoPage />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:ConfirmDialogViewModel}">
+            <view:ConfirmDialog />
+        </DataTemplate>
         <!--<DataTemplate DataType="{x:Type vm:RoleInfoViewModel}">
             <view:RoleInfoView />
         </DataTemplate>
