--- a/MVVM_pratices_2/View/StartPage.xaml
+++ b/MVVM_pratices_2/View/StartPage.xaml
@@ -35,7 +35,7 @@
                 <Button
                     Height="45"
                     Command="{Binding MonsterItemsCommand}"
-                    Content="怪物道具"
+                    Content="狩獵怪物"
                     FontSize="18" />
             </StackPanel>
 
