新增存檔 讀檔功能 實作物品道具頁面 修改遊玩時間計算邏輯

--- a/MVVM_pratices_2/MainWindow.xaml
+++ b/MVVM_pratices_2/MainWindow.xaml
@@ -38,12 +38,9 @@
         <DataTemplate DataType="{x:Type vm:ConfirmDialogViewModel}">
             <view:ConfirmDialog />
         </DataTemplate>
-        <!--<DataTemplate DataType="{x:Type vm:RoleInfoViewModel}">
-            <view:RoleInfoView />
-        </DataTemplate>
         <DataTemplate DataType="{x:Type vm:InventoryViewModel}">
-            <view:InventoryView />
-        </DataTemplate>-->
+            <view:InventoryPage />
+        </DataTemplate>
 
     </Window.Resources>
 
