--- a/MVVM_pratices_2/View/InventoryPage.xaml
+++ b/MVVM_pratices_2/View/InventoryPage.xaml
@@ -1,12 +1,154 @@
-﻿<UserControl x:Class="MVVM_pratices_2.View.InventoryPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MVVM_pratices_2.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+﻿<UserControl
+    x:Class="MVVM_pratices_2.View.InventoryPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:MVVM_pratices_2.Converter"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MVVM_pratices_2.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <UserControl.Resources>
+        <conv:BoolToBrushConverter
+            x:Key="BoolToBrushConverter"
+            FalseBrush="#CCCCCC"
+            TrueBrush="DodgerBlue" />
+    </UserControl.Resources>
+
+    <Grid Margin="20" Background="#F5F5F5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <!--  返回按鈕  -->
+        <Button
+            Padding="10,5"
+            HorizontalAlignment="Left"
+            Command="{Binding BackCommand}"
+            Content="← 返回"
+            FontSize="14" />
+
+        <!--  主體內容  -->
+        <Grid Grid.Row="1" Margin="0,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+
+            <!--  左邊功能按鈕  -->
+            <StackPanel
+                Grid.Column="0"
+                Margin="0,0,10,0"
+                VerticalAlignment="Top">
+                <Button
+                    Height="40"
+                    Margin="0,10,0,0"
+                    Command="{Binding EquipCommand}"
+                    Content="裝備"
+                    IsEnabled="{Binding CanEquip}" />
+                <Button
+                    Height="40"
+                    Margin="0,10,0,0"
+                    Command="{Binding UseCommand}"
+                    Content="使用"
+                    IsEnabled="{Binding CanUse}" />
+                <Button
+                    Height="40"
+                    Margin="0,10,0,0"
+                    Command="{Binding DropCommand}"
+                    Content="丟棄"
+                    IsEnabled="{Binding SelectedItem}" />
+            </StackPanel>
+
+            <!--  中間格子  -->
+            <ScrollViewer
+                Grid.Column="1"
+                Margin="10,0"
+                VerticalScrollBarVisibility="Auto">
+                <ItemsControl ItemsSource="{Binding InventoryItems}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid
+                                Columns="5"
+                                IsItemsHost="True"
+                                Rows="4" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemContainerStyle>
+                        <Style TargetType="ContentPresenter">
+                            <Setter Property="HorizontalAlignment" Value="Stretch" />
+                            <Setter Property="VerticalAlignment" Value="Stretch" />
+                        </Style>
+                    </ItemsControl.ItemContainerStyle>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button
+                                Width="60"
+                                Height="60"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding DataContext.SelectItemCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                CommandParameter="{Binding}">
+                                <Border
+                                    Margin="0"
+                                    Background="White"
+                                    BorderBrush="{Binding IsSelected, Converter={StaticResource BoolToBrushConverter}}"
+                                    BorderThickness="2"
+                                    CornerRadius="5">
+                                    <TextBlock
+                                        FontSize="14"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding Name}"
+                                        TextAlignment="Center" />
+                                </Border>
+                            </Button>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+
+            <!--  右邊詳細資訊  -->
+            <Border
+                Grid.Column="2"
+                Margin="20,0,0,0"
+                Padding="15"
+                Background="White"
+                BorderBrush="#CCC"
+                BorderThickness="1"
+                CornerRadius="4">
+                <StackPanel>
+                    <TextBlock
+                        Margin="0,0,0,10"
+                        FontSize="18"
+                        FontWeight="Bold"
+                        Text="{Binding SelectedItem.Name}" />
+                    <TextBlock FontWeight="Bold" Text="能力：" />
+                    <TextBlock Margin="0,0,0,10" Text="{Binding SelectedItem.Stats}" />
+                    <TextBlock FontWeight="Bold" Text="說明：" />
+                    <TextBlock
+                        Margin="0,0,0,10"
+                        Text="{Binding SelectedItem.Description}"
+                        TextWrapping="Wrap" />
+                    <TextBlock FontWeight="Bold" Text="價格：" />
+                    <TextBlock Text="{Binding SelectedItem.SellPrice}" />
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <!--  下方控制按鈕區（可擴充）  -->
+        <StackPanel
+            Grid.Row="2"
+            Margin="0,20"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <!--  預留空間  -->
+        </StackPanel>
     </Grid>
 </UserControl>
