--- a/MVVM_pratices_2/View/StartPage.xaml
+++ b/MVVM_pratices_2/View/StartPage.xaml
@@ -8,65 +8,65 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Border Padding="20">
-        <Grid Background="#EEEEEE">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+    <Viewbox Stretch="Uniform">
+        <Border Padding="20" Background="#EEEEEE">
+            <Grid Width="800" Height="400">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-            <!--  主操作按鈕  -->
-            <StackPanel
-                Grid.Row="0"
-                Width="250"
-                Margin="16"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center">
-                <Button
-                    Height="45"
-                    Command="{Binding RoleInfoCommand}"
-                    Content="角色資訊"
-                    FontSize="18" />
-                <Button
-                    Height="45"
-                    Command="{Binding InventoryCommand}"
-                    Content="背包道具"
-                    FontSize="18" />
-                <Button
-                    Height="45"
-                    Command="{Binding MonsterItemsCommand}"
-                    Content="狩獵怪物"
-                    FontSize="18" />
-            </StackPanel>
 
-            <!--  左上角返回  -->
-            <Button
-                Margin="10"
-                Padding="10,5"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Command="{Binding MenuCommand}"
-                Content="← 返回主選單"
-                FontSize="14" />
+                <!--  主操作按鈕  -->
+                <StackPanel
+                    Grid.Row="0"
+                    Width="250"
+                    Margin="16"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+                    <Button
+                        Height="45"
+                        Command="{Binding RoleInfoCommand}"
+                        Content="角色資訊"
+                        FontSize="18" />
+                    <Button
+                        Height="45"
+                        Command="{Binding InventoryCommand}"
+                        Content="背包道具"
+                        FontSize="18" />
+                    <Button
+                        Height="45"
+                        Command="{Binding MonsterItemsCommand}"
+                        Content="狩獵怪物"
+                        FontSize="18" />
+                </StackPanel>
 
-            <!--  右下角功能  -->
-            <StackPanel
-                Grid.Row="1"
-                Margin="10"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Orientation="Horizontal">
+                <!--  左上角返回  -->
                 <Button
-                    Padding="10,5"
-                    Command="{Binding SaveCommand}"
-                    Content="存檔"
-                    FontSize="14" />
-                <Button
-                    Padding="10,5"
-                    Command="{Binding LoadCommand}"
-                    Content="讀檔"
-                    FontSize="14" />
-            </StackPanel>
-        </Grid>
-    </Border>
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Command="{Binding MenuCommand}"
+                    Content="← 返回主選單"
+                    FontSize="18" />
+
+                <!--  右下角功能  -->
+                <StackPanel
+                    Grid.Row="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Orientation="Horizontal">
+                    <Button
+                        Padding="10,5"
+                        Command="{Binding SaveCommand}"
+                        Content="存檔"
+                        FontSize="18" />
+                    <Button
+                        Padding="10,5"
+                        Command="{Binding LoadCommand}"
+                        Content="讀檔"
+                        FontSize="18" />
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Viewbox>
 </UserControl>
